Bug 355808 - Cannot drag search results
Summary: Cannot drag search results
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-23 20:42 UTC by Kai Uwe Broulik
Modified: 2016-01-04 23:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2015-11-23 20:42:15 UTC
It is no longer possible to drag search results to create a launcher or drop a document somewhere

Reproducible: Always

Steps to Reproduce:
1. Search for something
2. Try to drag one of the search results
3.

Actual Results:  
Does not work

Expected Results:  
I can drag the element anywhere I please
Comment 1 Kai Uwe Broulik 2016-01-04 23:13:18 UTC
Git commit 30ab223050d1d57b5fb81de366dbb89e6e67a21c by Kai Uwe Broulik.
Committed on 04/01/2016 at 23:11.
Pushed by broulik into branch 'master'.

[Kickoff/Kicker] Extract underlying URL from search result

This enables drag and drop functionality.
FIXED-IN: 5.6.0
REVIEW: 126579

M  +11   -0    applets/kicker/plugin/runnermatchesmodel.cpp

http://commits.kde.org/plasma-desktop/30ab223050d1d57b5fb81de366dbb89e6e67a21c