[Kickoff/Kicker] Extract underlying URL from search result

This enables drag and drop functionality.

BUG: 355808
FIXED-IN: 5.6.0
REVIEW: 126579